k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: registry.minikube.failk8s.com/failk8s/petclinic:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: petclinic-regcred
      serviceAccountName: petclinic
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
spec:
  rules:
  - host: petclinic-dev.apps.minikube.failk8s.com
    http:
      paths:
      - backend:
          serviceName: petclinic
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - petclinic-dev.apps.minikube.failk8s.com
    secretName: wildcard
